dist_man1_MANS=

if BUILD_C1PZOD
  dist_man1_MANS+=c1pzod.1
endif

if ENABLE_QT
  dist_man1_MANS+=c1pzo-qt.1
endif

if BUILD_C1PZO_CLI
  dist_man1_MANS+=c1pzo-cli.1
endif

if BUILD_C1PZO_TX
  dist_man1_MANS+=c1pzo-tx.1
endif

if BUILD_C1PZO_UTIL
  dist_man1_MANS+=c1pzo-util.1
endif

if ENABLE_WALLET
if BUILD_C1PZO_WALLET
  dist_man1_MANS+=c1pzo-wallet.1
endif
endif
